# GLM-4.1V-Thinking

./: README.md  requirements.txt
glmv_reward/: README.md  pyproject.toml
glmv_reward/examples/: reward_system_demo.py
glmv_reward/scripts/gui_agent/: OSWorld.py
glmv_reward/src/glmv_reward/: reward_system.py
glmv_reward/src/glmv_reward/configs/verifiers/: __init__.py  fluency.py  instruct.py  post_rl_format.py
glmv_reward/src/glmv_reward/utils/: llm.py  text.py
glmv_reward/src/glmv_reward/verifiers/: __init__.py  biology_verifier.py  chemistry_verifier.py  fluency_verifier.py  geography_verifier.py  instruct_verifier.py  liberal_arts_verifier.py  ocr_verifier.py  physics_verifier.py  post_rl_format_verifier.py
inference/: trans_infer_gradio.py
